fixed css, hamburger and dark mode

--- a/styles/base.css
+++ b/styles/base.css
@@ -41,11 +41,6 @@ nav .menu li:first-child a {
 	color: #fff;
 }
 
-/* .active {
-font-weight: 700;
-	background-color: lightgreen;
-} */
-
 nav li a.menu-item {
 	display: none;
 }
@@ -57,27 +52,6 @@ nav li a.open {
 nav #menu-button.close::before {
 	content: "X";
 }
-
-/* nav ul{
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    justify-content: right;
-    align-items: center;
-    background-color: black;
-    gap: 3rem;
-    padding: 1rem;
-    margin: 0;
-}
-nav *:nth-child(1) {
-    padding-right: 0;
-}
-
-nav a{
-    color: white;
-    text-decoration: none;
-} */
-
 
 header {
     background-color: rgba(38, 78, 109, 1);
@@ -99,15 +73,12 @@ h1 {
 
 main {
     color: black;
-    max-width: 100%;
     padding: 2rem;
     height: 100%;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    display: block;
 }
 
 main h2 {
-    grid-column: 1/-1;
     border-bottom: 1px solid black;
     padding: 1rem;
     text-align: center;
@@ -116,15 +87,12 @@ main h2 {
 main.dark,
 main.dark a {
     background-color: rgb(35, 35, 35);
-    color: white;
+    color: white
 }
-main.dark h2 {
-    color: white;
-}
-
 
 main.dark section {
     border: 2px solid rgb(150, 150, 150);
+    color: white
 }
 
 
@@ -143,28 +111,9 @@ section {
     border-radius: 10px;
     box-shadow: 2px 2px 3px 3px rgba(89, 100, 108, 0.5);
     margin: 2rem;
-}
-
-#activities {
-    grid-column: 1 / 2;
-    grid-row: 2/4;
     line-height: 2rem;
 }
 
-#project {
-    grid-column: 2 / 3;
-}
-#project ul {
-    padding: 1rem;
-}
-
-#information {
-    grid-column: 2 / 3;
-}
-
-#information div{
-    padding: 10px 0 0 20px;
-}
 
 h3 {
     background-color: rgba(38, 78, 109, 1);
