--- a/styles/larger.css
+++ b/styles/larger.css
@@ -13,11 +13,34 @@
         grid-gap: 1rem;
     }
 
+    main h2 {
+        grid-column: 1 / -1;
+        text-align: left;
+    }
+
     section {
         margin: 0;
     }
 
-    h2 {
-        text-align: left;
+    #activities {
+        grid-column: 1 / 2;
+        grid-row: 2/4;
+    }
+    
+    #project {
+        grid-column: 2 / 3;
+        grid-row: 2 / 3;
+    }
+    #project ul {
+        padding: 1rem;
+    }
+    
+    #information {
+        grid-column: 2 / 3;
+        grid-row: 3 / 4;
+    }
+
+    #information div{
+        padding: 10px 0 0 20px;
     }
 }
